--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2072810290,
+  "date": "2024-Oct-15",
+  "seed": 969427699,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83",
-  "date": "2024-Oct-15"
+  "rate": "4.83"
 }
