--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Oct-15",
-  "rate": "4.83",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1338685776
+  "seed": 492022795,
+  "rate": "4.83",
+  "date": "2024-Oct-15"
 }
