--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 492022795,
+  "seed": 256811641,
   "rate": "4.83",
-  "date": "2024-Oct-15"
+  "date": "2024-Oct-15",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
