--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1153897119,
   "date": "2024-Oct-15",
-  "seed": 1792344980
+  "rate": "4.83"
 }
