--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1656923579,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1153897119,
-  "date": "2024-Oct-15",
-  "rate": "4.83"
+  "rate": "4.83",
+  "date": "2024-Oct-15"
 }
