--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2048197330,
   "rate": "4.83",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Oct-16",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 646778763
 }
