--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Oct-16",
-  "seed": 646778763
+  "seed": 2001573996,
+  "rate": "4.83"
 }
