--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 487023682,
+  "rate": "4.83",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-16",
-  "seed": 2001573996,
-  "rate": "4.83"
+  "date": "2024-Oct-16"
 }
