--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1129090256,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 254753481,
   "date": "2024-Oct-16",
-  "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.83"
 }
