--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 254753481,
+  "rate": "4.83",
   "date": "2024-Oct-16",
-  "rate": "4.83"
+  "seed": 338512537,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
