--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 676465161,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "date": "2024-Oct-16",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 717441443,
+  "date": "2024-Oct-16"
 }
