--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 243404008,
   "date": "2024-Oct-17",
-  "rate": "4.83"
+  "rate": "4.83",
+  "seed": 1423299738,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
