--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.83",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Oct-17",
-  "seed": 268428587,
-  "rate": "4.83"
+  "seed": 1339783065
 }
