--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2148378,
+  "date": "2024-Oct-17",
   "rate": "4.83",
-  "date": "2024-Oct-17"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1625689110
 }
