--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.83",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1317422130,
   "date": "2024-Oct-17",
-  "rate": "4.83"
+  "seed": 712950598
 }
