--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "seed": 1312336286,
-  "date": "2024-Oct-17"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Oct-17",
+  "seed": 1938590409
 }
