--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Oct-18",
   "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 12794563
+  "date": "2024-Oct-18",
+  "seed": 240844909,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
