--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1760865838,
-  "date": "2024-Oct-18",
+  "rate": "4.83",
+  "seed": 1064598604,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83"
+  "date": "2024-Oct-18"
 }
