--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 78871725,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 231540215,
-  "rate": "4.83",
-  "date": "2024-Oct-18"
+  "date": "2024-Oct-18",
+  "rate": "4.83"
 }
