--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 78871725,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Oct-18",
-  "rate": "4.83"
+  "seed": 2023867661,
+  "rate": "4.83",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
