--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-18",
+  "seed": 809119743,
   "rate": "4.83",
-  "seed": 1811680519
+  "date": "2024-Oct-18",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
