--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 809119743,
   "rate": "4.83",
-  "date": "2024-Oct-18",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 2091445725,
+  "date": "2024-Oct-18"
 }
