--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Oct-21",
   "rate": "4.83",
-  "seed": 1369239412,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-18"
+  "seed": 297460256
 }
