--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Oct-21",
-  "rate": "4.83",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 297460256
+  "seed": 51491954,
+  "date": "2024-Oct-21",
+  "rate": "4.83"
 }
