--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 613813768,
-  "date": "2024-Oct-21",
-  "rate": "4.83"
+  "seed": 593742471,
+  "rate": "4.83",
+  "date": "2024-Oct-21"
 }
