--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Oct-21",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 593742471,
-  "rate": "4.83",
-  "date": "2024-Oct-21"
+  "seed": 975677057,
+  "rate": "4.83"
 }
