--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Oct-21",
+  "seed": 2091073246,
+  "rate": "4.83",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 975677057,
-  "rate": "4.83"
+  "date": "2024-Oct-21"
 }
