--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-21",
   "rate": "4.83",
-  "seed": 1532080744
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 213193700,
+  "date": "2024-Oct-21"
 }
