--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 213193700,
-  "date": "2024-Oct-21"
+  "seed": 768658369,
+  "date": "2024-Oct-21",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
