--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1159394242,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "seed": 768658369,
-  "date": "2024-Oct-21",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2024-Oct-22"
 }
