--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 260761076,
   "date": "2024-Oct-22",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "seed": 592599589
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
