--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 857828043,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Oct-22",
   "rate": "4.83",
-  "date": "2024-Oct-22"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 547560242
 }
