--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Oct-22",
-  "rate": "4.83",
+  "seed": 106012148,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 547560242
+  "date": "2024-Oct-22",
+  "rate": "4.83"
 }
