--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 106012148,
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.83",
   "date": "2024-Oct-22",
-  "rate": "4.83"
+  "seed": 1128567282
 }
