--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83",
   "date": "2024-Oct-22",
-  "seed": 53270968
+  "seed": 591804002,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.83"
 }
