--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1999881319,
+  "seed": 787318833,
+  "rate": "4.83",
   "date": "2024-Oct-23",
-  "rate": "4.83"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
