--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1204126706,
   "rate": "4.83",
-  "date": "2024-Oct-23",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 557742093,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Oct-23"
 }
