--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Oct-23",
+  "seed": 1140578833,
   "rate": "4.83",
-  "seed": 557742093,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-23"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
