--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 337830416,
   "date": "2024-Oct-23",
-  "seed": 949242458
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
