--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1009771232,
-  "date": "2024-Oct-23",
+  "rate": "4.83",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83"
+  "date": "2024-Oct-23",
+  "seed": 92977884
 }
