--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 2132963151,
   "rate": "4.83",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-24",
-  "seed": 835484242
+  "date": "2024-Oct-24"
 }
