--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Oct-24",
-  "seed": 686152197,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.83",
+  "seed": 1868354452
 }
