--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
+  "date": "2024-Oct-24",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1990411217,
-  "date": "2024-Oct-24"
+  "rate": "4.83",
+  "seed": 1761634593
 }
