--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Oct-24",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "seed": 1761634593
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 943578220,
+  "date": "2024-Oct-24"
 }
