--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-24",
-  "seed": 1294731638,
-  "rate": "4.83"
+  "rate": "4.83",
+  "seed": 714711925,
+  "date": "2024-Oct-24"
 }
