--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Oct-25",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "seed": 714711925,
-  "date": "2024-Oct-24"
+  "seed": 60834950
 }
