--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Oct-25",
+  "rate": "4.83",
+  "seed": 1768511696,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 946396185,
-  "rate": "4.83"
+  "date": "2024-Oct-25"
 }
