--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Oct-25",
   "rate": "4.83",
-  "seed": 979931079,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-25"
+  "seed": 553041186
 }
