--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Oct-25",
+  "seed": 1336436097,
   "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 553041186
+  "date": "2024-Oct-25",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
