--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1336436097,
+  "seed": 301198672,
   "rate": "4.83",
-  "date": "2024-Oct-25",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Oct-25"
 }
