--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1553352563,
+  "date": "2024-Oct-25",
   "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-25"
+  "seed": 1544511648,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
