--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.83",
+  "seed": 473685111,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-25",
-  "seed": 1495278089
+  "date": "2024-Oct-25"
 }
