--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "seed": 1787615136,
-  "date": "2024-Oct-25"
+  "date": "2024-Oct-28",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1213162080
 }
