--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.83",
-  "date": "2024-Oct-28",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1213162080
+  "seed": 993374699,
+  "date": "2024-Oct-28"
 }
