--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Oct-28",
   "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1416692786,
-  "date": "2024-Oct-28"
+  "seed": 1409337459,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
