--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Oct-28",
   "rate": "4.83",
-  "seed": 1409337459,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1285536893,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Oct-28"
 }
