--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
-  "seed": 1285536893,
+  "date": "2024-Oct-28",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-28"
+  "rate": "4.83",
+  "seed": 1286498769
 }
