--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Oct-28",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "seed": 1286498769
+  "seed": 594242683,
+  "date": "2024-Oct-28",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
