--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 387140720,
   "rate": "4.83",
-  "seed": 594242683,
-  "date": "2024-Oct-28",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Oct-28"
 }
