--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1849563320,
+  "rate": "4.83",
   "date": "2024-Oct-28",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83"
+  "seed": 146727439,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
