--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "date": "2024-Oct-28",
-  "seed": 285699798,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 243464504,
+  "date": "2024-Oct-29"
 }
