--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 2045668701,
+  "date": "2024-Oct-29",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83",
-  "seed": 1367083649,
-  "date": "2024-Oct-29"
+  "rate": "4.83"
 }
