--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
-  "seed": 2038630613,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-29"
+  "rate": "4.83",
+  "date": "2024-Oct-29",
+  "seed": 1174661822
 }
