--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 712366181,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83",
   "date": "2024-Oct-29",
-  "seed": 1174661822
+  "rate": "4.83"
 }
