--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 712366181,
+  "rate": "4.83",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-29",
-  "rate": "4.83"
+  "seed": 27883253,
+  "date": "2024-Oct-29"
 }
