--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 159627039,
   "rate": "4.83",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-29"
+  "date": "2024-Oct-29",
+  "seed": 1737431843
 }
