--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 819750676,
   "date": "2024-Oct-29",
-  "seed": 1737431843
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.83"
 }
