--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 819750676,
-  "date": "2024-Oct-29",
+  "rate": "4.83",
+  "seed": 57474013,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83"
+  "date": "2024-Oct-30"
 }
