--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2068741505,
   "rate": "4.83",
-  "date": "2024-Oct-30"
+  "seed": 476462869,
+  "date": "2024-Oct-30",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
