--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1146215429,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
   "date": "2024-Oct-30",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 811828933
 }
