--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Oct-30",
   "rate": "4.83",
-  "seed": 1280541746,
-  "date": "2024-Oct-30"
+  "seed": 999275416
 }
