--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-30",
   "rate": "4.83",
-  "seed": 999275416
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1243908534,
+  "date": "2024-Oct-30"
 }
