--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Oct-30",
-  "seed": 1590054585,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1542968219,
   "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2024-Oct-30"
 }
