--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1542968219,
   "rate": "4.83",
-  "date": "2024-Oct-30"
+  "date": "2024-Oct-30",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 910927978
 }
