--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Oct-31",
+  "seed": 974349627,
   "rate": "4.83",
-  "date": "2024-Oct-30",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 910927978
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
