--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Oct-31",
   "rate": "4.83",
-  "seed": 620366609,
-  "date": "2024-Oct-31"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1946195316
 }
