--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Oct-31",
   "rate": "4.83",
+  "seed": 1054977106,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1946195316
+  "date": "2024-Oct-31"
 }
