--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1356664970,
   "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1810382723,
-  "date": "2024-Oct-31"
+  "date": "2024-Oct-31",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
