--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 876950101,
   "rate": "4.83",
   "date": "2024-Oct-31",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 69937916
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
