--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 61648384,
-  "date": "2024-Oct-31",
-  "rate": "4.83"
+  "rate": "4.83",
+  "seed": 1772683854,
+  "date": "2024-Oct-31"
 }
