--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 2122604723,
+  "date": "2024-Oct-31",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83",
-  "seed": 1772683854,
-  "date": "2024-Oct-31"
+  "rate": "4.83"
 }
