--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-31",
-  "seed": 1997163995,
-  "rate": "4.83"
+  "date": "2024-Nov-1",
+  "seed": 1320352147,
+  "rate": "4.83",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
