--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Nov-1",
-  "seed": 1320352147,
+  "seed": 1339644644,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2024-Nov-1"
 }
