--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1339644644,
+  "date": "2024-Nov-1",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83",
-  "date": "2024-Nov-1"
+  "seed": 1870353434,
+  "rate": "4.83"
 }
