--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 929800540,
   "date": "2024-Nov-1",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1429207384,
-  "rate": "4.83"
+  "rate": "4.83",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
