--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83",
   "date": "2024-Nov-1",
-  "seed": 1790927684
+  "rate": "4.83",
+  "seed": 936018151,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
