--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 222113925,
-  "date": "2024-Nov-1",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1628151389,
   "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2024-Nov-1"
 }
