--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1312891921,
+  "seed": 1351510793,
+  "date": "2024-Nov-1",
   "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Nov-1"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
