--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.83",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Nov-4",
-  "seed": 1752197465,
-  "rate": "4.83"
+  "seed": 804580829,
+  "date": "2024-Nov-4"
 }
