--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
+  "seed": 1820656935,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 804580829,
-  "date": "2024-Nov-4"
+  "date": "2024-Nov-4",
+  "rate": "4.83"
 }
