--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 184484019,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Nov-4",
+  "seed": 1516470338,
   "rate": "4.83",
-  "date": "2024-Nov-4"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
