--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Nov-4",
-  "seed": 1516470338,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1627028184,
+  "date": "2024-Nov-4"
 }
