--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83",
-  "seed": 1627028184,
-  "date": "2024-Nov-4"
+  "date": "2024-Nov-4",
+  "seed": 303985952,
+  "rate": "4.83"
 }
