--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1185957250,
+  "rate": "4.83",
   "date": "2024-Nov-4",
-  "seed": 303985952,
-  "rate": "4.83"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
