--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Nov-4",
-  "seed": 981641777,
-  "rate": "4.83"
+  "date": "2024-Nov-5",
+  "seed": 348262398,
+  "rate": "4.83",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
