--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1671465790,
-  "rate": "4.83",
   "date": "2024-Nov-5",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 117070287,
+  "rate": "4.83"
 }
