--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Nov-5",
+  "rate": "4.83",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 117070287,
-  "rate": "4.83"
+  "seed": 1574797097,
+  "date": "2024-Nov-5"
 }
