--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1616828272,
+  "date": "2024-Nov-5",
   "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1807319666,
-  "date": "2024-Nov-5"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
