--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1918938890,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "date": "2024-Nov-5",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 527474546,
+  "date": "2024-Nov-5"
 }
