--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.83",
-  "seed": 1139151404,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Nov-5"
+  "seed": 1208725488,
+  "date": "2024-Nov-5",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
