--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Nov-6",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "seed": 1208725488,
-  "date": "2024-Nov-5",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 561567689
 }
