--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Nov-6",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "seed": 561567689
+  "date": "2024-Nov-6",
+  "seed": 1146662763,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
