--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.83",
+  "seed": 955646950,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Nov-6",
-  "seed": 719257203,
-  "rate": "4.83"
+  "date": "2024-Nov-6"
 }
