--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2024-Nov-6",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "seed": 1500254169
+  "seed": 1923650695,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
