--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Nov-6",
-  "rate": "4.83",
-  "seed": 1923650695,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1134311352,
+  "rate": "4.83"
 }
