--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Nov-6",
-  "seed": 1134311352,
-  "rate": "4.83"
+  "rate": "4.83",
+  "seed": 1437797712,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
