--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Nov-6",
+  "seed": 1586426048,
   "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1255021311,
-  "date": "2024-Nov-6"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
