--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
+  "seed": 371596500,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1928628050,
-  "date": "2024-Nov-6"
+  "date": "2024-Nov-7",
+  "rate": "4.83"
 }
