--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 371596500,
+  "rate": "4.83",
+  "seed": 2014974976,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Nov-7",
-  "rate": "4.83"
+  "date": "2024-Nov-7"
 }
