--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1427093433,
   "date": "2024-Nov-7",
-  "rate": "4.83"
+  "seed": 852544232,
+  "rate": "4.83",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
