--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1820329199,
-  "rate": "4.83",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Nov-7",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1662886254,
+  "rate": "4.83"
 }
