--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2024-Nov-7",
-  "seed": 807015725,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83"
+  "seed": 757641732,
+  "rate": "4.83",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
