--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Nov-7",
-  "seed": 1282720165
+  "seed": 1948921928,
+  "rate": "4.83",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
