--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 868922310,
+  "seed": 1025710251,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83",
-  "date": "2024-Nov-7"
+  "date": "2024-Nov-7",
+  "rate": "4.83"
 }
