--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2024-Nov-7",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1120025857,
-  "rate": "4.83"
+  "rate": "4.83",
+  "seed": 1983270073,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
