--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2024-Nov-7",
-  "rate": "4.83",
-  "seed": 1983270073,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 461043586,
+  "rate": "4.83"
 }
