--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1142592354,
   "date": "2024-Nov-7",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1472731235
 }
