--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Nov-7",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "seed": 1472731235
+  "seed": 520743816,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Nov-7"
 }
