--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 758070544,
   "rate": "4.83",
-  "date": "2024-Nov-7"
+  "date": "2024-Nov-7",
+  "seed": 1444543183,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
