--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Nov-7",
+  "rate": "4.58",
+  "date": "2024-Nov-11*",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 227265967,
-  "rate": "4.83"
+  "seed": 502842015
 }
