--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Nov-11*",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.58",
-  "seed": 973947755
+  "seed": 1403412624,
+  "date": "2024-Nov-11*",
+  "rate": "4.58"
 }
