--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 271785051,
+  "rate": "4.58",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Nov-11*",
-  "seed": 119380369,
-  "rate": "4.58"
+  "date": "2024-Nov-11*"
 }
