--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 786107007,
   "date": "2024-Nov-11*",
-  "rate": "4.58",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1733412923
+  "rate": "4.58"
 }
