--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 128236357,
-  "date": "2024-Nov-11*",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.58"
+  "rate": "4.58",
+  "seed": 687942758,
+  "date": "2024-Nov-11*"
 }
