--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Nov-11*",
+  "seed": 118462634,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.58",
-  "seed": 687942758,
-  "date": "2024-Nov-11*"
+  "rate": "4.58"
 }
