--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2024-Nov-11*",
-  "seed": 118462634,
+  "rate": "4.58",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.58"
+  "seed": 1020354559
 }
