--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1991804937,
+  "date": "2024-Nov-12",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.58",
-  "seed": 786317016,
-  "date": "2024-Nov-12"
+  "rate": "4.58"
 }
