--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.58",
-  "date": "2024-Nov-12",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 173663445
+  "date": "2024-Nov-12",
+  "seed": 394299720,
+  "rate": "4.58"
 }
