--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.58",
-  "date": "2024-Nov-12",
-  "seed": 365875701
+  "seed": 385895583,
+  "date": "2024-Nov-12"
 }
