--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1623341069,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.58",
-  "seed": 70183415,
-  "date": "2024-Nov-12",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2024-Nov-12"
 }
