--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 865389332,
   "rate": "4.58",
-  "date": "2024-Nov-12"
+  "date": "2024-Nov-13",
+  "seed": 715366457
 }
