--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.58",
   "date": "2024-Nov-13",
-  "seed": 715366457
+  "seed": 1564201207,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
