--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 485375152,
+  "rate": "4.58",
   "date": "2024-Nov-13",
-  "seed": 1165551222,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.58"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
