--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.58",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Nov-13",
-  "seed": 1783193133
+  "seed": 207462423,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
