--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.58",
-  "seed": 1275381187,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 83892180,
   "date": "2024-Nov-13",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.58"
 }
