--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 83892180,
-  "date": "2024-Nov-13",
-  "rate": "4.58"
+  "seed": 169656415,
+  "rate": "4.58",
+  "date": "2024-Nov-13"
 }
