--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Nov-13",
-  "rate": "4.58",
-  "seed": 517589419,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1850586686,
+  "rate": "4.58"
 }
