--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Nov-13",
-  "seed": 1850586686,
-  "rate": "4.58"
+  "seed": 220596027,
+  "date": "2024-Nov-14",
+  "rate": "4.58",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
