--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2037730950,
+  "seed": 1062278424,
+  "rate": "4.58",
   "date": "2024-Nov-14",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.58"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
