--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Nov-14",
+  "seed": 465494320,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.58",
-  "seed": 380988015,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2024-Nov-14"
 }
