--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 465494320,
+  "date": "2024-Nov-14",
+  "seed": 1062277168,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.58",
-  "date": "2024-Nov-14"
+  "rate": "4.58"
 }
