--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.58",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Nov-14",
-  "seed": 529240591,
-  "rate": "4.58"
+  "date": "2024-Nov-15",
+  "seed": 524798736
 }
