--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 764162389,
-  "rate": "4.58",
+  "seed": 1298739307,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Nov-15",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.58"
 }
