--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 72211632,
+  "seed": 630947801,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.58",
-  "date": "2024-Nov-15"
+  "date": "2024-Nov-15",
+  "rate": "4.58"
 }
