--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 432216977,
+  "seed": 2044336098,
   "date": "2024-Nov-15",
-  "rate": "4.58"
+  "rate": "4.58",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
