--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.58",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 485648639,
   "date": "2024-Nov-15",
-  "rate": "4.58"
+  "seed": 469927756
 }
