--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 675399572,
   "rate": "4.58",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Nov-15",
-  "seed": 469927756
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
