--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1553256148,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.58",
-  "date": "2024-Nov-18"
+  "date": "2024-Nov-18",
+  "seed": 634132262,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
