--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.58",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 548583413,
   "date": "2024-Nov-18",
-  "seed": 634132262,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.58"
 }
