--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.58",
+  "seed": 1097019760,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 548583413,
-  "date": "2024-Nov-18",
-  "rate": "4.58"
+  "date": "2024-Nov-18"
 }
