--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Nov-18",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 776924822,
   "rate": "4.58",
-  "seed": 1648265202
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Nov-18"
 }
