--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 776924822,
+  "date": "2024-Nov-18",
   "rate": "4.58",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Nov-18"
+  "seed": 448357739
 }
