--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Nov-18",
   "rate": "4.58",
+  "seed": 779066313,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 448357739
+  "date": "2024-Nov-18"
 }
