--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 42506516,
+  "date": "2024-Nov-19",
   "rate": "4.58",
-  "seed": 779066313,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Nov-18"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
