--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 42506516,
-  "date": "2024-Nov-19",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.58",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 2059886900,
+  "date": "2024-Nov-19"
 }
