--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 246704697,
+  "date": "2024-Nov-19",
   "rate": "4.58",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Nov-19"
+  "seed": 504234502,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
