--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2024-Nov-19",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.58",
-  "seed": 504234502,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1467189171
 }
