--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.58",
   "date": "2024-Nov-19",
-  "seed": 2068023815,
-  "rate": "4.58"
+  "seed": 2050051245,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
