--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.58",
-  "date": "2024-Nov-19",
+  "seed": 1993071095,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 949207975
+  "rate": "4.58",
+  "date": "2024-Nov-20"
 }
