--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1993071095,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.58",
-  "date": "2024-Nov-20"
+  "date": "2024-Nov-20",
+  "seed": 1240651670
 }
