--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.58",
+  "seed": 2081328274,
   "date": "2024-Nov-20",
-  "seed": 1240651670
+  "rate": "4.58"
 }
