--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1609001458,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Nov-20",
-  "rate": "4.58"
+  "rate": "4.58",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1319060420
 }
