--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Nov-20",
   "rate": "4.58",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 417812939
+  "date": "2024-Nov-20",
+  "seed": 553447668,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
