--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.58",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1076003777,
-  "date": "2024-Nov-20"
+  "rate": "4.58",
+  "date": "2024-Nov-20",
+  "seed": 1710364310
 }
