--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1843626389,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.58",
+  "seed": 1138380352,
   "date": "2024-Nov-21",
-  "rate": "4.58"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
