--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Nov-21",
-  "seed": 704477943,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.58"
+  "rate": "4.58",
+  "date": "2024-Nov-21",
+  "seed": 269248070
 }
