--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Jan-1*",
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.58",
-  "date": "2024-Nov-21",
-  "seed": 269248070
+  "seed": 1674289457
 }
