--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jan-1*",
+  "seed": 899911173,
   "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1674289457
+  "date": "2025-Jan-1*"
 }
