--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 899911173,
+  "date": "2025-Jan-1*",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-1*"
+  "seed": 1278727608,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
