--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jan-1*",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 1278727608,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1679012898,
+  "date": "2025-Jan-2"
 }
