--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jan-2",
-  "seed": 2103097532,
+  "rate": "4.33",
+  "seed": 1201362534,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "date": "2025-Jan-2"
 }
