--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-2",
+  "seed": 817241094,
   "rate": "4.33",
-  "seed": 431826423
+  "date": "2025-Jan-2"
 }
