--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jan-2",
-  "rate": "4.33",
-  "seed": 1656014790,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1053226637,
+  "rate": "4.33"
 }
