--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "date": "2025-Jan-2",
+  "seed": 1538771192,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1174181438
+  "date": "2025-Jan-2",
+  "rate": "4.33"
 }
