--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "seed": 658004641,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-2"
+  "date": "2025-Jan-2",
+  "seed": 1158699255,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
