--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1959582207,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Jan-3",
-  "seed": 1675098832,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Jan-3"
 }
