--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 975748927,
+  "date": "2025-Jan-3",
+  "seed": 22862760,
   "rate": "4.33",
-  "date": "2025-Jan-3"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
