--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jan-3",
-  "seed": 22862760,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 828339483,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Jan-3"
 }
