--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
+  "seed": 573506872,
   "date": "2025-Jan-3",
-  "seed": 990546521
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
