--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 573506872,
+  "rate": "4.33",
+  "seed": 238530243,
   "date": "2025-Jan-3",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
