--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 883110958,
   "rate": "4.33",
-  "date": "2025-Jan-3",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1808997444,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jan-6"
 }
