--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1517432505,
-  "rate": "4.33",
+  "seed": 994157750,
+  "date": "2025-Jan-6",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-6"
+  "rate": "4.33"
 }
