--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 645386131,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Jan-6"
+  "seed": 1015918372,
+  "date": "2025-Jan-6",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
