--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 1015918372,
+  "seed": 529232855,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jan-6",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33"
 }
