--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1780572336,
+  "rate": "4.33",
   "date": "2025-Jan-6",
-  "rate": "4.33"
+  "seed": 1325410583,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
