--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jan-6",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 337797740
+  "date": "2025-Jan-6",
+  "seed": 1336924145,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
