--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jan-7",
   "rate": "4.33",
-  "date": "2025-Jan-6",
-  "seed": 1336924145,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 720272510
 }
