--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jan-7",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 788110336
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1591556106,
+  "date": "2025-Jan-7"
 }
