--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Jan-7",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1591556106,
-  "date": "2025-Jan-7"
+  "seed": 787232496,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
