--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1341321934,
+  "date": "2025-Jan-7",
   "rate": "4.33",
-  "seed": 561551677,
-  "date": "2025-Jan-7"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
