--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 571333495,
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-7",
-  "seed": 1234569376,
-  "rate": "4.33"
+  "date": "2025-Jan-7"
 }
