--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 571333495,
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-7"
+  "date": "2025-Jan-7",
+  "rate": "4.33",
+  "seed": 1621810094
 }
