--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1942564813,
   "date": "2025-Jan-7",
   "rate": "4.33",
-  "seed": 1621810094
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
