--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Jan-7",
-  "seed": 460634159,
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1921339018,
+  "rate": "4.33"
 }
