--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 226522870,
   "date": "2025-Jan-7",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1527712853,
-  "rate": "4.33"
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
