--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 226522870,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jan-7",
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1289028481,
+  "rate": "4.33"
 }
