--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "seed": 913606694,
   "date": "2025-Jan-7",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 470435540
+  "rate": "4.33"
 }
